--- a/app/assets/stylesheets/pages.scss.erb
+++ b/app/assets/stylesheets/pages.scss.erb
@@ -8,13 +8,14 @@ $background-grey: #eef2f3;
   background-color: $background-grey;
 }
 
-.bg-purple {
-  height: 20rem;
-  background: linear-gradient(270deg, #5544a2, #4369a9, #2c457e);
-  background-size: 600% 600%;
+body {
+  height: 400rem;
+  background: linear-gradient(179deg, #fcf9f4, #e7e3da, #d8d1be, #cfc19c);
+  background-size: 800% 800%;
 
   -webkit-animation: AnimationName 8s ease infinite;
   -moz-animation: AnimationName 8s ease infinite;
+  -o-animation: AnimationName 8s ease infinite;
   animation: AnimationName 8s ease infinite;
 
   @-webkit-keyframes AnimationName {
@@ -27,12 +28,17 @@ $background-grey: #eef2f3;
       50%{background-position:100% 50%}
       100%{background-position:0% 50%}
   }
-  @keyframes AnimationName { 
+  @-o-keyframes AnimationName {
       0%{background-position:0% 50%}
       50%{background-position:100% 50%}
       100%{background-position:0% 50%}
   }
-}
+  @keyframes AnimationName { 
+      0%{background-position:0% 50%}
+      50%{background-position:100% 50%}
+      100%{background-position:0% 50%}
+  } 
+} 
 
 .innovatigo {
   position: relative;
@@ -59,11 +65,12 @@ $background-grey: #eef2f3;
   background-position: center;
   background-repeat: no-repeat;
   height: 40rem;
-  background: linear-gradient(270deg, #8e9eab, #eef2f3);
-  background-size: 400% 400%;
+  background: linear-gradient(179deg, #fcf9f4, #e7e3da, #d8d1be, #cfc19c);
+  background-size: 800% 800%;
 
   -webkit-animation: AnimationName 8s ease infinite;
   -moz-animation: AnimationName 8s ease infinite;
+  -o-animation: AnimationName 8s ease infinite;
   animation: AnimationName 8s ease infinite;
 
   @-webkit-keyframes AnimationName {
@@ -76,12 +83,17 @@ $background-grey: #eef2f3;
       50%{background-position:100% 50%}
       100%{background-position:0% 50%}
   }
-  @keyframes AnimationName { 
+  @-o-keyframes AnimationName {
       0%{background-position:0% 50%}
       50%{background-position:100% 50%}
       100%{background-position:0% 50%}
   }
-}
+  @keyframes AnimationName { 
+      0%{background-position:0% 50%}
+      50%{background-position:100% 50%}
+      100%{background-position:0% 50%}
+  } 
+}  
 
 .diferencias { 
   padding-right: 6rem;
