--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,5 @@
 
+<body>
 <section id="intro" class="bg-blue top">
   <div class="container innovatigo">
     <div class="row centered">
@@ -240,6 +241,7 @@
     </div>  
   </div> <!-- /container -->
 </section>
+</body>
 
 <footer>
   <div class="container centered">
