svg trial, gem inline_svg

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -262,3 +262,11 @@ hr {
 .overlay:hover {
   opacity: 0.7;
 }
+
+// SVG
+
+.kostya-logo {
+  width: 30%;
+  padding-bottom: 5rem;
+  fill: white;
+}
