--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
   <div class="container innovatigo">
     <div class="row centered">
       <div class="col-md-12 col-sm-12 col-xs-12">
-        <h1>Kostya</h1>
+        <%= inline_svg("kostya.svg", class: "kostya-logo")%>
       </div>
     </div>
   </div> <!-- /container -->
