--- a/app/assets/stylesheets/fonts.scss
+++ b/app/assets/stylesheets/fonts.scss
@@ -20,44 +20,11 @@
 }
 
 @font-face {
-  font-family: 'Futura Std';
-  src: url(font-path('futura_book/futurastd-bold.otf')) format('opentype');
-  font-weight: 800;
+  font-family: 'Helvetica Neue';
+  src: url(font-path('HelveticaNeue.dfont')) format('opentype');
+  font-weight: 200;
   font-style: normal;
 }
 
-@font-face {
-  font-family: 'Geo';
-  src: url(font-path('geo/geo_light.ttf')) format('opentype');
-  font-weight: 100;
-  font-style: normal;
-}
 
-@font-face {
-  font-family: 'Geo Oblique';
-  src: url(font-path('geo/geo_oblique.ttf')) format('opentype');
-  font-weight: 100;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Biko';
-  src: url(font-path('biko/biko_light.otf')) format('opentype');
-  font-weight: 100;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Biko';
-  src: url(font-path('biko/biko_regular.otf')) format('opentype');
-  font-weight: 300;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Biko';
-  src: url(font-path('biko/biko_black.otf')) format('opentype');
-  font-weight: 500;
-  font-style: normal;
-}
 
