--- a/app/assets/stylesheets/pages.scss.erb
+++ b/app/assets/stylesheets/pages.scss.erb
@@ -9,68 +9,33 @@ $background-grey: #f2f2f2;
 
 body {
   height: 350rem;
-  background: linear-gradient(179deg, #fcf9f4, #e7e3da, #d8d1be, #cfc19c);
-  background-size: 800% 800%;
-
-  -webkit-animation: AnimationName 8s ease infinite;
-  -moz-animation: AnimationName 8s ease infinite;
-  -o-animation: AnimationName 8s ease infinite;
-  animation: AnimationName 8s ease infinite;
-
-  @-webkit-keyframes AnimationName {
-      0%{background-position:0% 50%}
-      50%{background-position:100% 50%}
-      100%{background-position:0% 50%}
-  }
-  @-moz-keyframes AnimationName {
-      0%{background-position:0% 50%}
-      50%{background-position:100% 50%}
-      100%{background-position:0% 50%}
-  }
-  @-o-keyframes AnimationName {
-      0%{background-position:0% 50%}
-      50%{background-position:100% 50%}
-      100%{background-position:0% 50%}
-  }
-  @keyframes AnimationName { 
-      0%{background-position:0% 50%}
-      50%{background-position:100% 50%}
-      100%{background-position:0% 50%}
-  } 
+  background: transparent;
 } 
 
 #intro {
-  background-image: url(peeling-1.jpg);
-}
-
-.top {
-  position: relative;
-  background-size: cover;
-  background-position: center;
+  height: 75rem;
+  background-position: center top;
+  background-color: transparent;
   background-repeat: no-repeat;
-  height: 29rem;
-  background-size: 100% 100%;
-/*  animation: peeling 10s ease infinite;
-
-  @keyframes peeling {
-    0%{transform: translate3d(0rem, 0rem, 0rem);}
-    50%{transform: translate3d(1rem, 0rem, 0rem);}
-    100%{transform: translate3d(0rem, 0rem, 0rem);}
-  } */
+  background-size: auto auto;
+  padding-top: 0;
 }
 
 .kostya {
-  position: relative;
-  top: 50%;
-  transform: translateY(-50%);
+  height: 30rem;
+  background-position: center top;
+  background-color: transparent;
+  background-repeat: no-repeat;
+  background-size: 100% auto;
+  @media (max-width: 1170px) {
+    background-size: auto auto;
+  }
 }
 
-.innovamos {
-  margin-top: 1rem;
-  text-align: center;
+#falparsi {
+  height: 15rem;
   position: relative;
-  top: 50%;
-  transform: translateY(-50%);
+  background: transparent;
 }
 
 .logo {
