--- a/app/assets/stylesheets/pages.scss.erb
+++ b/app/assets/stylesheets/pages.scss.erb
@@ -8,8 +8,8 @@ $background-grey: #f2f2f2;
 }
 
 body {
-  height: 350rem;
-  background: transparent;
+  height: 246rem;
+  background-image: url(/assets/background.jpg);
 } 
 
 #intro {
